#1128 fix jumpy dropdown, added snackbar on error

--- a/src/TrueOrFalse.Frontend.Web.Nuxt/assets/shared/dropdown.less
+++ b/src/TrueOrFalse.Frontend.Web.Nuxt/assets/shared/dropdown.less
@@ -38,6 +38,10 @@
         font-size: 14px;
         padding: 12px 0;
 
+        &:has(div.sidesheet-wikioptions) { 
+            padding: 0;
+        }
+
         &:has(div.searchDropdown) { 
             padding: 0;
         }
